--- a/src/kernel/mediatek/mt8173b/kernel-3.18/drivers/hid/Kconfig
+++ b/src/kernel/mediatek/mt8173b/kernel-3.18/drivers/hid/Kconfig
@@ -111,6 +111,26 @@ config HID_ACRUX_FF
 	Say Y here if you want to enable force feedback support for ACRUX
 	game controllers.
 
+config HID_AMAZON_ASPEN
+	tristate "Amazon Aspen BT Keyboard / Trackpad"
+	depends on HID
+	default HID
+	---help---
+	Support for Amazon Aspen KB/TrackPad
+	This custom driver handle Vendor specific events.
+
+	Say Y here if you want to enable support for Amazon Aspen KB/TrackPad
+
+config HID_AMAZON_MAGNETO
+	tristate "Amazon Aspen BT Keyboard / Trackpad"
+	depends on HID
+	default HID
+	---help---
+	Support for Amazon Magneto KB/Trackpad
+	This custom driver handle Vendor specific events.
+
+	Say Y here if you want to enable support for Amazon Magneto KB/TrackPad
+
 config HID_APPLE
 	tristate "Apple {i,Power,Mac}Books" if EXPERT
 	depends on HID
@@ -864,6 +884,17 @@ config HID_SENSOR_HUB
 	  drivers can use the service provided by this driver to register
 	  for events and handle data streams. Each sensor driver can format
 	  data and present to user mode using input or IIO interface.
+
+config HID_LAB126
+	tristate "Lab126 keyboard"
+	depends on HID
+	default y
+	---help---
+	  Support for Lab126 keyboard.
+	  this will add magneto object to the build.
+	  Can be configured as module.
+	  Safe to say no
+
 
 endmenu
 
