--- a/src/kernel/mediatek/mt8173b/kernel-3.18/drivers/hid/Makefile
+++ b/src/kernel/mediatek/mt8173b/kernel-3.18/drivers/hid/Makefile
@@ -10,6 +10,7 @@ endif
 obj-$(CONFIG_HID)		+= hid.o
 obj-$(CONFIG_UHID)		+= uhid.o
 
+obj-$(CONFIG_HID_LAB126) += hid-magneto.o
 obj-$(CONFIG_HID_GENERIC)	+= hid-generic.o
 
 hid-$(CONFIG_HIDRAW)		+= hidraw.o
@@ -35,6 +36,8 @@ endif
 
 obj-$(CONFIG_HID_A4TECH)	+= hid-a4tech.o
 obj-$(CONFIG_HID_ACRUX)		+= hid-axff.o
+obj-$(CONFIG_HID_AMAZON_ASPEN) += hid-aspen.o
+obj-$(CONFIG_HID_AMAZON_MAGNETO) += hid-magneto.o
 obj-$(CONFIG_HID_APPLE)		+= hid-apple.o
 obj-$(CONFIG_HID_APPLEIR)	+= hid-appleir.o
 obj-$(CONFIG_HID_AUREAL)        += hid-aureal.o
